:fix: last changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is the meta description of the webpage. It provides a brief summary of the content.">
+    <meta name="description" content="Haus Vinilos es una pagina web para conocer a mi coleccion">
 
     <title>HAUS</title>
 
@@ -30,19 +30,13 @@
 <body>
     <!-- HEADER -->
     <header class="header">
+        <img src="./assets/img/Haus-Logo-White.webp" alt="" class="header__img">
         <nav class="header__nav">
             <ul class="header__ul">
                 <li class="header__li"><a href="#sobre" class="header__a">Sobre</a></li>
                 <li class="header__li"><a href="#generos" class="header__a">Géneros</a></li>
             </ul>
         </nav>
-        <img src="./assets/img/Haus-Logo-White.webp" alt="" class="header__img">
-            <svg class="header__icon icon-cart-empty" aria-hidden="true" focusable="false"
-                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" fill="none">
-                <path
-                    d="m15.75 11.8h-3.16l-.77 11.6a5 5 0 0 0 4.99 5.34h7.38a5 5 0 0 0 4.99-5.33l-.78-11.61zm0 1h-2.22l-.71 10.67a4 4 0 0 0 3.99 4.27h7.38a4 4 0 0 0 4-4.27l-.72-10.67h-2.22v.63a4.75 4.75 0 1 1 -9.5 0zm8.5 0h-7.5v.63a3.75 3.75 0 1 0 7.5 0z"
-                    fill="currentColor" fill-rule="evenodd"></path>
-            </svg>
     </header>
 
     <!-- MAIN -->
