--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Haus Vinilos es una pagina web para conocer a mi coleccion">
+    <link rel="icon" href="./assets/img/vinyl.svg" type="image/x-icon">
 
     <title>HAUS</title>
 
     <link rel="stylesheet" href="css/style.css">
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
